2010-09-29  Jan Nijtmans  <nijtmans@users.sf.net>

	* unix/tcl.m4:         sync with tcl version
	* unix/configure:      re-generate with autoconf-2.59
	* win/configure:

2010-09-28  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/tkWinSend.c: [Bug 3076671] CVS HEAD Tk build fails on win32
	with msys/mingw. Make it compile on older mingw as well.
	* generic/tk.decls:   Add explicit scspec "EXTERN", as in Tcl
	* generic/tkInt.decls:
	* generic/tkStubInit.c: Don't let Tk_MainEx macro disturb compilation

2010-09-23  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/tcl.m4:            Add -Wdeclaration-after-statement
	* win/configure:         (regenerated)
	* win/tkWinX.c:          Make compilable with -DUNICODE.
	* win/winMain.c:
	* unix/tkAppInit.c:      Many clean-ups in comments, so all
	(tcl|tk)AppInit.c variants use the same style.
	* generic/ttk/ttkGenStubs.tcl: Dummy genStubs::export (from genStubs.tcl)

2010-09-20  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/ttk/ttkGenStubs.tcl: clean-up, port all genStubs.tcl changes
	* generic/ttk/ttk.decls:    from Tcl to ttkGenStubs.tcl as well (no
	* generic/tk.decls:         change in any output files). This brings
	* generic/tkInt.decls:      all *.decls in the same form as tcl.decls

2010-09-16  Jeff Hobbs  <jeffh@ActiveState.com>

	* win/tkWinX.c (_WIN32_IE): update to IE5.5 base expectation

2010-09-14  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/rules.vc       [FRQ 2965056]: Windows build with -DUNICODE
	* win/Makefile.in

2010-09-13  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/tkWin.h          Move definitions of WINVER/_WIN32_WINNT
	* win/tkWinDialog.h    to one place, now that we only support
	* win/tkWinMenu.c      Win2000+
	* win/tkWinX.c

2010-09-10  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/tkWinEmbed.c:     Make compilable with -DUNICODE
	* win/tkWinClipboard.c: Mark those files as not compilable with
	* win/tkWinColor.c:     -DUNICODE, so add a TODO.
	* win/tkWinCursor.c:
	* win/tkWinDialog.c: